# my-config

./: .gitignore  LICENSE  README.md  example.py  jinnang-utils  pyproject.toml  sample_config.yml  sample_llm_config.yml  setup.py
example/: example.py
example/conf/: base.yml  llm.yml  my_app.dev.yml
examples/: README_LLM_IMPROVEMENTS.md  config_resolution_example.py  env_aware_config_example.py  improved_base_config_example.py  llm_config_example.py  recursive_config_test.py  sample_llm_config.yml
src/my_config/: __init__.py  base.py  env.py  env_aware.py  llm.py
src/my_config/utils/: __init__.py  singleton.py
tests/: test_base_config.py  test_config.py  test_env_aware_config.py  test_env_var_integration.py  test_env_var_resolution.py  test_llm_config.py
