[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_config"
version = "0.1.0"
description = "Configuration management for Python applications"
authors = [{name = "Cheng Yanru", email = "yanru@cyanru.com"}]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "pytz",
    "jinnang @ git+https://github.com/yanrucheng/jinnang-utils@v0.2.1.dev06221021#egg=jinnang",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "isort",
]
