[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_config"
version = "0.1.0"
description = "Configuration management for Python applications"
authors = [{name = "Cheng Yanru", email = "yanru@cyanru.com"}]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "pytz",
    "jinnang>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "isort",
    "build",
    "twine",
]

[tool.pip]
extra-index-url = "https://pypi.org/simple"
